[gd_scene load_steps=6 format=3 uid="uid://bojarqg117ck6"]

[ext_resource type="Script" uid="uid://bmmrx374wdq46" path="res://GUI/MainMenu/Scripts/tutorial.gd" id="1_vwciu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.623529, 0.584314, 1)
shadow_color = Color(0, 0, 0, 0.290196)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_textbg"]
bg_color = Color(0.0509804, 0.0627451, 0.0784314, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.623529, 0.584314, 0.3)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rn2kl"]
bg_color = Color(0.156863, 0.141176, 0.176471, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.623529, 0.584314, 0.501961)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygdsp"]
bg_color = Color(0.121569, 0.141176, 0.160784, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.623529, 0.584314, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.290196)
shadow_size = 4

[node name="Tutorial" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_vwciu")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 19.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.156863, 0.623529, 0.584314, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.513726)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
text = "Tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 28.0
offset_right = -10.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="TutorialTextPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_textbg")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TutorialTextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TutorialText" type="RichTextLabel" parent="VBoxContainer/TutorialTextPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.803922, 0.901961, 0.901961, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Tutorial Text"

[node name="PageIndicator" type="Label" parent="VBoxContainer/TutorialTextPanel"]
layout_mode = 2
offset_left = 276.5
offset_top = 180.0
offset_right = 318.5
offset_bottom = 194.0
theme_override_colors/font_color = Color(0.529412, 0.529412, 0.529412, 1)
theme_override_font_sizes/font_size = 10
text = "Page 1/6"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 26)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.156863, 0.623529, 0.584314, 1)
theme_override_colors/font_color = Color(0.803922, 0.901961, 0.901961, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/hover = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/normal = SubResource("StyleBoxFlat_ygdsp")
text = "Back"

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 26)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.156863, 0.623529, 0.584314, 1)
theme_override_colors/font_color = Color(0.803922, 0.901961, 0.901961, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/hover = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/normal = SubResource("StyleBoxFlat_ygdsp")
text = " Next "

[node name="SkipButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 26)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.156863, 0.623529, 0.584314, 1)
theme_override_colors/font_color = Color(0.803922, 0.901961, 0.901961, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/hover = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rn2kl")
theme_override_styles/normal = SubResource("StyleBoxFlat_ygdsp")
text = " Skip Tutorial"
